# insurance_consult

./: .gitignore  Dockerfile  README.md  docker-compose.yml  graphrag_improvements.md  insurance.db  main.py  pyproject.toml  requirements.txt  todo.md
agents/: criteria_generator.py  graph_rag_retriever.py  md_retriever.py  policy_fetcher.py  policy_scorer.py  profile_analyzer.py  query_agent.py  report_writer.py  retriever.py  scoring_reviewer.py  summarizer.py
api/: auth.py  db.py  main.py  parser.py  session_manager.py
data/policies/: term_500000_20_None_None_Y_M_N_20260402_101831.json
frontend/: app.js  index.html  styles.css
graphrag/: prepare_input.py  run_index.py  run_query.py  settings.yaml
graphrag/cache/extract_claims/: 065eec1ca2e19de550b7eea88162e4faff8252425ecfcc8bf3544accae13f042_v4  (+97 more)
graphrag/input/: AIA Guaranteed Protect Plus (III).txt  AIA Pro Lifetime Protector (II).txt  Complete Life Secure.txt  DIRECT Star Protect Pro.txt  sample.txt
graphrag/output/: communities.parquet  community_reports.parquet  covariates.parquet  documents.parquet  entities.parquet  relationships.parquet  stats.json  text_units.parquet
graphs/: state.py  workflow.py
rag/: docling_parser.py  document_loaders.py  indexer.py  mlx_embedder.py  retriever.py  test.ipynb
schema/: models.py
tools/: cache.sql  cache_manager.py  calculator.py  graphrag_tools.py  interactive_tools.py  policy_tools.py  search_tools.py  test_cache.py
tools/comparefirst/: dump_validatefrm.ts  package-lock.json  package.json  scraper.ts
tools/policyCrawler/: convert_to_md.py  crawler.py
(+453 files in other folders)
